Tuesday, July 2, Ron Steinke

	* Fixes so the blocking poll handles timeouts
	  created during callbacks properly

Sunday, June 30, Ron Steinke

	* PollDefault fixes
	* Timeout::poll() and Timeout::pollAll() now return info
	  on when to poll again

Wednesday, June 26, Al Riddoch

	* Switched to new location for skstream headers.

Monday, June 21, Ron Steinke

	* Added an optional timeout argument to PollDefault::poll()

Tuesday, June 18, James Turner

	* Make dtor of Meta virtual, just to be safe

Monday, April 29, Ron Steinke

	* Added check for fd == INVALID_SOCKET in PollDefault

Sunday, June 2, James Turner

	* Safety tweaks in Connection::recv() and Metaserver::recv()
	  to handle bad sockets without segfaulting. Should
	  improve reliability of the Dime meta-server code.

Wednesday, May 22, James Turner

	* Modified Meta::got_data to be safe even when _stream is
	  NULL. This is legal when the meta-server has finished
	  sending us the server list, but there are still
	  active queries (which is quite commmon, when you think
	  about it)

Tuesday, May 21, James Turner

	* Protected against MOVE ops with no ID argument set: fail
	  rather than asserting.
	* Protected against character refreshed prior to account
	  login. (Thanks man-di)

Wednesday, May 15, James Turner

	* Added implemention of missing getServerCount to the Metaserver
	* Fixed the Meta update code to emit CompletedServerList after
	  the last active query is deleted. [Thanks to Xmp for catching
	  both issues, which no one has touched before]
	* Tweaked emission of CompletedServerList to do the right thing
	* Hopefully fixed Meta::doFailure to remove _stream from the Poll
	  object (should stop the stream of errors in Dime)
	* Converted Meta::Failure to pass it's error by const reference, 
 	  like all the other signals do

Tuesday, May 14, Al Riddoch

	* src/Player.cpp: Ensure that USERNAME is provided for logins.

Sunday, May 5, James Turner
